--- a/src/styles/_to-top.scss
+++ b/src/styles/_to-top.scss
@@ -15,6 +15,7 @@
         background-color: #fff;
         border-radius: 50%;
         padding: 10px;
+        cursor: pointer;
     }
 
     &--active {
